--- a/RestaurantAPI2/appsettings.json
+++ b/RestaurantAPI2/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Authentication": { //konfiguracja autentykacji
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE", //reprezentuje klucz potrzebny do wygenerowanie tokenu Jwt
+    "JwtExpireDays": 15, //czas przez jaki czas token bêdzie wa¿ny
+    "JwtIssuer": "http://restaurantapi.com" //podmiot, który generuje dany token
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
