--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           dotnet-version: 5.0.x
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ./RestaurantAPI2/
       - name: Build
-        run: dotnet --no-restore
+        run: dotnet --no-restore ./RestaurantAPI2/
       - name: Test
-        run: dotnet test
+        run: dotnet test ./RestaurantAPI2/
