--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore ./RestaurantAPI2/
       - name: Build
-        run: dotnet build --no-restore 
+        run: dotnet build --no-restore ./RestaurantAPI2/
       - name: Test
         run: dotnet test ./RestaurantAPI2/
